# LLPS_ACTIVE-BATH

./: .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  LLPS_analysis_input_template.txt  Partition_Coeff_Macro_stack_template.ijm  README.md
include/: PART_COEFF.h  PB_ANALY.h  SYS_F_M.h  USEFUL_MISC.h
src/: PB_analysis.cpp  PC_algorithm.cpp  file_mani.cpp  func_misc.cpp  main.cpp  sys_mani.cpp
